--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
+    <TextView
+            android:text="Login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" android:textSize="24sp"
+            android:textColor="@android:color/white" android:layout_marginStart="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
     <EditText
             android:id="@+id/textView_email_login"
             android:layout_width="0dp"
@@ -55,15 +63,6 @@
             app:layout_constraintEnd_toEndOf="@+id/textView_pass_login"
             app:layout_constraintStart_toStartOf="@+id/textView_pass_login"
             app:layout_constraintTop_toBottomOf="@+id/textView_pass_login"/>
-    <TextView
-            android:text="Login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView" android:textSize="24sp"
-            android:textColor="@android:color/white" android:layout_marginStart="24dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toTopOf="parent"/>
     <TextView
             android:text="Belum punya akun ?"
             android:layout_width="wrap_content"
