--- a/app/src/main/res/layout/post_detail_comment_title.xml
+++ b/app/src/main/res/layout/post_detail_comment_title.xml
@@ -15,5 +15,5 @@
             android:text="Komentar"
             android:textColor="@android:color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"/>
 </android.support.constraint.ConstraintLayout>
