--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,6 +6,10 @@
           android:title="Home"
           />
 
+    <item android:id="@+id/bottom_news"
+          android:icon="@drawable/selector_news"
+          android:title="Berita"/>
+
     <item android:id="@+id/bottom_article"
           android:icon="@drawable/selector_article"
           android:title="Article"/>
